ProjectMicroserviсes/K8S/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
      - name: commandservice
        image: mariayarema/commandservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: commands-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
  - name: commandservice
    # protocol: TCP
    port: 80
    targetPort: 80

        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        # ports:
        # kubectl apply -f commands-depl.yaml
        # kubectl apply -f platforms-depl.yaml
        #kubectl get deployments 
        #kubectl get pods 
        #kubectl delete deployment  platforms-depl
        #kubectl get deployments  
        #kubectl apply -f platforms-np-svr.yaml
#kubectl get services
# kubectl rollout restart deployment platforms-depl
#kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.2/deploy/static/provider/aws/deploy.yaml
#kubectl get namespace
#kubectl get pods --namespace=ingress-nginx 
#kubectl get services --namespace=ingress-nginx
