ProjectMicroserviсes/K8S/platforms-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: platformnpservice-srv
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 80
#kubectl apply -f platforms-np-svr.yaml
#kubectl get services
#kubectl get deployments
